--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec",
+    "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --watchAll",
     "generate": "stencil generate"
   },
@@ -21,7 +21,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@blaze/atoms": "^11.0.3",
+    "@blaze/css": "^9.2.0",
+    "@kuscamara/context-provider": "file:../context-provider",
     "@types/phoenix": "^1.5.1",
+    "lit-element": "^2.4.0",
     "phoenix": "^1.5.7"
   }
 }
