--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "@stencil/core": "^2.0.0",
     "@stencil/router": "^1.0.1",
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.17",
     "@types/puppeteer": "^5.4.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "puppeteer": "^5.4.1"
+    "puppeteer": "^5.4.1",
+    "rollup-plugin-dotenv": "^0.3.0"
   },
   "license": "MIT",
   "dependencies": {
     "@blaze/atoms": "^11.0.3",
     "@blaze/css": "^9.2.0",
     "@kuscamara/context-provider": "file:../context-provider",
+    "@open-wc/lit-helpers": "^0.3.11",
+    "@power-elements/stripe-elements": "^2.3.7",
     "@types/phoenix": "^1.5.1",
+    "@types/stripe-v3": "^3.1.23",
+    "@webcomponents/webcomponentsjs": "^2.5.0",
     "lit-element": "^2.4.0",
     "phoenix": "^1.5.7"
   }
